# vsag

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md
python/: pyproject.toml  setup.cfg  setup.py
python/pyvsag/: sparse.py
src/: CMakeLists.txt  basic_types.h  common.h  constants.cpp  container_types.h  data_type.h  dataset_impl.cpp  dataset_impl.h  dataset_impl_test.cpp  hash_types.h  index_commom_param_test.cpp  index_common_param.cpp  index_common_param.h  index_common_param_fwd.h  index_detail_data_test.cpp  index_feature_list_test.cpp  inner_string_params.h  json_types.h  json_wrapper.cpp  json_wrapper.h  json_wrapper_test.cpp  load_parameters.cpp  options.cpp  options_test.cpp  query_context.h  reader.cpp  type_helpers.h  typing.h  version.h.in  vsag.cpp  vsag_c_api.cpp  vsag_c_api_test.cpp  vsag_exception.h  vsag_ext.cpp
src/algorithm/: CMakeLists.txt  brute_force.cpp  brute_force.h  brute_force_parameter_test.cpp  hgraph.cpp  hgraph.h  hgraph_parameter.cpp  hgraph_parameter.h  hgraph_parameter_test.cpp  hgraph_shrink_checkpoint.h  hgraph_shrink_context.cpp  hgraph_shrink_context.h  hgraph_shrink_edges.h  hgraph_shrink_state.h  index_search_parameter.h  inner_index_interface.cpp  inner_index_interface.h  inner_index_interface_test.cpp  inner_index_parameter.cpp  inner_index_parameter.h  inner_index_parameter_test.cpp  ivf.cpp  ivf_parameter.h  ivf_parameter_test.cpp  pyramid.cpp  pyramid.h  pyramid_test.cpp  pyramid_zparameters.cpp  pyramid_zparameters.h  pyramid_zparameters_test.cpp  reverse_edge.h  reverse_edge_test.cpp  sparse_distance.h  sparse_index.cpp  warp.cpp  warp.h  warp_parameter.h
src/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  hgraph_analyzer.cpp  hgraph_analyzer.h  pyramid_analyzer.cpp  pyramid_analyzer.h  sindi_analyzer.cpp  sindi_analyzer.h
src/attr/: CMakeLists.txt  attr_type_schema_test.cpp  attr_value_map.cpp  attr_value_map.h  attr_value_map_test.cpp  attribute_test.cpp  expression_visitor.cpp  expression_visitor.h  expression_visitor_test.cpp  multi_bitset_manager.cpp  multi_bitset_manager.h  multi_bitset_manager_test.cpp
src/datacell/: CMakeLists.txt  attribute_bucket_inverted_datacell.cpp  attribute_bucket_inverted_datacell.h  attribute_bucket_inverted_datacell_test.cpp  attribute_inverted_interface.h  attribute_inverted_interface_parameter.cpp  attribute_inverted_interface_parameter.h  attribute_inverted_interface_parameter_test.cpp  bucket_datacell.h  bucket_datacell_parameter.cpp  bucket_datacell_parameter.h  bucket_datacell_parameter_test.cpp  bucket_datacell_test.cpp  bucket_interface.cpp  bucket_interface.h  bucket_interface_async_io.cpp  bucket_interface_buffer_io.cpp  bucket_interface_factory.h  bucket_interface_factory_impl.h  bucket_interface_memory_block_io.cpp  bucket_interface_memory_io.cpp  bucket_interface_mmap_io.cpp  bucket_interface_uring_io.cpp  code_slot_flatten_adapter.cpp  code_slot_flatten_adapter.h  code_slot_map.cpp  code_slot_map.h  code_slot_map_test.cpp  compressed_graph_datacell.cpp  compressed_graph_datacell.h  compressed_graph_datacell_parameter.h  compressed_graph_datacell_parameter_test.cpp  compressed_graph_datacell_test.cpp  dense_duplicate_tracker.cpp  dense_duplicate_tracker.h  dense_duplicate_tracker_test.cpp  duplicate_interface.h  extra_info_datacell.h  extra_info_datacell_parameter.h  extra_info_datacell_test.cpp  (+43 more)
src/factory/: CMakeLists.txt  engine.cpp  factory.cpp  factory_test.cpp  index_creators.cpp  index_creators.h  index_registry.cpp  index_registry.h
src/impl/: CMakeLists.txt  basic_optimizer.cpp  conjugate_graph.cpp  conjugate_graph_test.cpp  elias_fano_encoder.cpp  elias_fano_encoder_test.cpp  inner_search_param.h  label_table.cpp  label_table.h  label_table_test.cpp  pruning_strategy.cpp  pruning_strategy.h  pruning_strategy_test.cpp  reverse_edge.cpp  reverse_edge.h  reverse_edge_test.cpp
src/index/: diskann.cpp  diskann.h  diskann_test.cpp  diskann_zparameters.cpp  diskann_zparameters_test.cpp  hnsw.cpp  hnsw.h  hnsw_test.cpp  hnsw_zparameters.cpp  hnsw_zparameters.h  hnsw_zparameters_test.cpp  index_impl.h  index_impl_test.cpp
src/io/: CMakeLists.txt  async_io.cpp  async_io.h  async_io_parameter.cpp  async_io_parameter_test.cpp  async_io_test.cpp  basic_io.h  basic_io_test.h  buffer_io.cpp  buffer_io.h  buffer_io_parameter_test.cpp  buffer_io_test.cpp  direct_io_object.h  io_array.h  io_array_test.cpp  io_context.h  io_headers.h  io_parameter.cpp  io_parameter.h  io_syscall.h  memory_block_io.cpp  memory_block_io.h  memory_block_io_parameter_test.cpp  memory_block_io_test.cpp  memory_io.cpp  memory_io.h  memory_io_parameter_test.cpp  memory_io_test.cpp  mmap_io.cpp  mmap_io.h  mmap_io_parameter_test.cpp  mmap_io_test.cpp  noncontinuous_allocator.h  noncontinuous_io.h  noncontinuous_io_test.cpp  reader_io.cpp  reader_io.h  reader_io_parameter.h  reader_io_test.cpp
src/quantization/: CMakeLists.txt  computer.h  fp32_quantizer.cpp  fp32_quantizer.h  fp32_quantizer_parameter_test.cpp  fp32_quantizer_test.cpp  int8_quantizer.cpp  int8_quantizer.h  int8_quantizer_parameter_test.cpp  int8_quantizer_test.cpp  multi_vector_computer.cpp  multi_vector_computer.h  multi_vector_computer_test.cpp  quantizer.h  quantizer_adapter.cpp  quantizer_adapter.h  quantizer_adapter_test.cpp  quantizer_adapter_test.h  quantizer_parameter.cpp  quantizer_test.h
src/simd/: CMakeLists.txt  amx.cpp  amx_bf16_matmul.h  amx_bf16_matmul_test.cpp  avx.cpp  avx2.cpp  avx512.cpp  basic_func.cpp  basic_func_test.cpp  bf16_simd.cpp  bf16_simd_test.cpp  bit_simd.cpp  bit_simd_test.cpp  fp16_simd.cpp  fp16_simd.h  fp16_simd_test.cpp  fp32_simd.cpp  fp32_simd.h  fp32_simd_test.cpp  generic.cpp  int8_simd.cpp  int8_simd_test.cpp  neon.cpp  normalize.cpp  normalize.h  normalize_test.cpp  pqfs_simd.cpp  pqfs_simd_test.cpp  rabitq_simd.cpp  rabitq_simd.h  rabitq_simd_test.cpp  simd.cpp  simd_dispatch.h  simd_marco.h  simd_status.cpp  simd_status.h  simd_test.cpp  sparse_accumulate_simd_test.cpp  sq4_simd.cpp  sq4_simd_test.cpp  (+10 more)
(+619 files in other folders)
