[build-system]
requires = [
    "setuptools<60; python_version == '3.6'",
    "setuptools>=61,<68; python_version == '3.7'",
    "setuptools>=68; python_version >= '3.8'",
    "setuptools_scm",
    "wheel",
    "pep440",
]
build-backend = "setuptools.build_meta"



[tool.cibuildwheel]
skip = ["*-musllinux*", "*i686*", "pp*"]
before-build = '''
                bash scripts/deps/install_deps_centos.sh 
              '''
before-all = '''
    sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*.repo
    sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*.repo
    if [[ "$(uname -m)" == "aarch64" ]]; then
      rm -f /etc/yum.repos.d/CentOS-SCLo-*.repo
    fi
    yum clean all
    yum install -y gcc gcc-c++ gcc-gfortran python3-devel
    yum install -y libaio-devel libcurl-devel ca-certificates
    yum install -y libgomp
'''

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
