[metadata]
name = pyvsag
description = vsag is a vector indexing library used for similarity search
author = the vsag project
author_email = the.vsag.project@gmail.com
license = Apache-2.0
url = https://github.com/antgroup/vsag
keywords = search, nearest, neighbors
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = pyvsag
python_requires = >=3.6
install_requires =
    packaging

[options.package_data]
pyvsag =
    _pyvsag*.so
    libvsag*.so*
    libvsag*.dylib


